# pado-tcga

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: run_pytests.yaml
pado_tcga/: providers.py
scripts/: describe_dataset.py
