[metadata]
name = pado_tcga
url = https://github.com/ap--/pado-tcga
download_url = https://github.com/ap--/pado-tcga
license = MIT license
license_files =
    LICENSE
description = Pado dataset for tcga on AWS opendata
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas@poehlmann.io
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pado
    s3fs
    typing_extensions >=4.4.0

[options.packages.find]
exclude =
    *.tests

[options.package_data]
pado_tcga =
    py.typed

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    mypy

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
